// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coco:eslint generator should output eslint configuration 1`] = `
"parser: babel-eslint
parserOptions:
  ecmaVersion: 2018
  sourceType: module
env:
  node: true
  jest: true
extends:
  - 'eslint:recommended'
  - 'airbnb-base'
  - 'prettier'
rules:
  linebreak-style:
    - error
    - unix
"
`;

exports[`coco:eslint render should render properly with babel parser 1`] = `
"parser: babel-eslint
parserOptions:
  ecmaVersion: 2018
  sourceType: module
rules:
  linebreak-style:
    - error
    - unix
"
`;

exports[`coco:eslint render should render properly without babel parser 1`] = `
"parserOptions:
  ecmaVersion: 2018
  sourceType: module
rules:
  linebreak-style:
    - error
    - unix
"
`;

exports[`coco:eslint render should render property context 1`] = `
"parserOptions:
  ecmaVersion: 2018
  sourceType: module
env:
  node: true
  jest: true
rules:
  linebreak-style:
    - error
    - unix
"
`;

exports[`coco:eslint render should render property environment extension 1`] = `
"parserOptions:
  ecmaVersion: 2018
  sourceType: module
extends:
  - 'eslint:recommended'
rules:
  linebreak-style:
    - error
    - unix
"
`;
